Add local storage and refine codebase

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
 
         <div id="todoList"></div>
+        <h1 id="no-todo" class="no-todo hide">No TODOs found<br>Add a todo to start!</h1>
       </div>
     </main>
 
